# argent

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTONOMOUS_DEVELOPMENT_PROMPT.md  BACKLOG.md  CLAUDE.md  CONSTITUTION.md  README.md  REQUIREMENTS.md  pyproject.toml
.agent/: pr_checklist.md
.claude/agents/: architecture-reviewer.md  devops-reviewer.md  pr-describer.md  qa-reviewer.md  ui-ux-reviewer.md
.github/workflows/: ci.yml
docs/: RETRO_LOG.md  data_story.md
docs/adr/: ADR-0001-package-topology.md  ADR-0002-middleware-contract.md  ADR-0003-xml-security-dep.md  ADR-0004-budget-context-coupling.md  ADR-0005-optional-sql-dependency.md
docs/backlog/: phase-0.md  phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
docs/data_story/: ARGENT_DATA_STORY.md
docs/data_story/scripts/: collect_metrics.py  metrics.json  test_collect_metrics.py
examples/: basic_agent.py
src/argent/: __init__.py
src/argent/budget/: __init__.py  budget.py  exceptions.py  executor.py
src/argent/ingress/: __init__.py  exceptions.py  parser.py  validators.py
src/argent/pipeline/: __init__.py  context.py  pipeline.py  telemetry.py
src/argent/security/: __init__.py  base.py  exceptions.py  sql_validator.py
src/argent/trimmer/: __init__.py  base.py  calculator.py  json_trimmer.py  markdown.py  traceback.py
tests/: conftest.py
tests/fixtures/payloads/: malformed_json.txt  plain.txt  valid.json  valid.yaml
tests/fixtures/responses/: tool_output_short.txt  tool_output_traceback.txt
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_budget.py  test_calculator.py  test_context.py  test_executor.py  test_ingress_parser.py  test_ingress_validators.py  test_package.py  test_pipeline.py  test_public_api.py  test_security_base.py  test_sql_validator.py  test_telemetry.py  test_trimmer_json.py  test_trimmer_markdown.py  test_trimmer_traceback.py
