[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argent"
version = "0.1.0"
description = "Deterministic, middleware-driven execution wrapper for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Argent Contributors"}
]
keywords = ["ai", "agents", "middleware", "safety", "execution-budget", "context-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "bandit[toml]>=1.7.6",
    "pre-commit>=3.6.0",
    "vulture>=2.11",
    "detect-secrets>=1.5.0,<2.0.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/rai-agentic-toolkit/argent"
Repository = "https://github.com/rai-agentic-toolkit/argent"
Issues = "https://github.com/rai-agentic-toolkit/argent/issues"

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "UP045",    # Use `X | None` - causes issues with Pydantic, prefer Optional[]
]

[tool.ruff.lint.isort]
known-first-party = ["argent"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR2004"]

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/argent"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
fail_under = 90

# =============================================================================
# Bandit Configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings in non-test code (we use them sparingly)

# =============================================================================
# Vulture Configuration (dead code detection)
# =============================================================================
[tool.vulture]
min_confidence = 80
paths = ["src/"]
ignore_names = ["cls"]  # Pydantic @classmethod validator parameter; required by protocol

# =============================================================================
# Commitizen Configuration
# =============================================================================
[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
version = "0.1.0"
major_version_zero = true
update_changelog_on_bump = false

[tool.commitizen.customize]
# Conventional commits extended with review: (3-round self-review evidence commits).
# Matches: <type>[(<scope>)][!]: <description>
# Using cz_customize (not cz_conventional_commits) so schema_pattern is honoured.
schema_pattern = "(?s)(feat|fix|refactor|perf|test|docs|chore|build|ci|style|revert|review|bump)(\\(\\S+\\))?(!)?: ([^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
